# turn-blog-feed-into-qa-dataset

./: README.md  pyproject.toml  turn-blog-feed-into-qa-dataset.ipynb
