[tool.poetry]
name = "turn-blog-feed-into-qa-dataset"
version = "0.1.0"
description = ""
authors = ["DidierRLopes <dro.lopes@campus.fct.unl.pt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
html2text = "^2024.2.26"
spacy = "^3.8.3"
datasets = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
